# test-daemon

./: .env.example  .gitignore  AGENTS.md  phase-2-5-seed.yaml  pyproject.toml  pyrightconfig.json
config/: hosts.example.yaml
copilot-sdk-frontend/: README.md  package-lock.json  package.json
copilot-sdk-frontend/src/: chat.mjs
src/jules_daemon/: __init__.py  __main__.py  audit_models.py  cli_main.py  demo_runner.py  mcp_server.py
tests/: test_agent_backoff.py  test_agent_config.py  test_agent_loop.py  test_agent_loop_e2e.py  test_agent_loop_happy_path_integration.py  test_agent_loop_integration.py  test_agent_loop_orchestration.py  test_agent_response_parser.py  test_agent_tool_wrappers.py  test_alert_collector.py  test_alert_dedup.py  test_alert_models.py  test_alert_query.py  test_anomaly_models.py  test_archival_approval.py  test_args_builder.py  test_argument_collector.py  test_argument_gap.py  test_ask_user_question_tool.py  test_assembled_result.py  test_async_queue.py  test_audit_age_scanner.py  test_audit_archiver.py  test_audit_chain.py  test_audit_models.py  test_audit_models_entry.py  test_audit_wiki_writer.py  test_benchmark_report.py  test_benchmark_runner.py  test_benchmark_types.py  test_boot_reader.py  test_bypass_benchmark.py  test_check_remote_processes_tool.py  test_checkpoint_extractor.py  test_checkpoint_recovery.py  test_classifier_models.py  test_classify.py  test_cli_main.py  test_client_disconnect_detector.py  test_client_io.py  (+191 more)
tests/fixtures/: __init__.py  baseline_latency.py  demo_scenarios.py  (+1 more)
wiki/: README.md  index.md  log.md
(+247 files in other folders)
